[package]
name = "showmethekey-rs"
version = "0.1.0"
description = "Show the key you typed on screen"
authors = ["(C) AlynxZhou <alynx.zhou[at]gmail.com>",
        "(Rust) WhiredPlanck <whiredplanck[at]outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
anyhow = "1.0"
nix = "0.24"
input = "0.7"
evdev = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
