[package]
name = "showmethekey-cli"
version = "0.1.0"
description = "The backend of Show Me The Key"
authors = ["(C) AlynxZhou <alynx.zhou[at]gmail.com>",
        "(Rust) WhiredPlanck <whiredplanck[at]outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1"
anyhow = "1.0"
nix = "0.24"
input = "0.7"
evdev = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 'z'
