[package]
name = "showmethekey-cli"
version = "0.2.0"
description = "The backend of Show Me The Key (Rust version)"
authors = ["(C) AlynxZhou <alynx.zhou[at]gmail.com>",
        "(Rust) WhiredPlanck <whiredplanck[at]outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "smtk-cli-rs"
path = "src/main.rs"

[dependencies]
clap = "^4"
anyhow = "1.0"
nix = "0.26"
input = "^0.8"
evdev = "^0.12"
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 'z'
